Fix spacing

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -74,9 +74,6 @@ h4 {
     margin-left: auto;
     margin-right: auto;
 }
-/*.relative-center {
-    padding: 0 10%;
-}*/
 .text-left {
     text-align: left;
 }
@@ -115,6 +112,10 @@ h4 {
 .section-text {
     margin-top: 0;
     margin-bottom: 5px;
+}
+.section-paragraph {
+    margin-top: 0;
+    margin-bottom: 15px;
 }
 .section-center {
     display: flex;
